# backend/internal/app/app.go
@@ -26,10 +26,10 @@ func RunApp(cfg *config.Config) {
 	usersGroup.POST("/", api.CreateUser)
 	usersGroup.GET("/", api.GetUsers)
 	usersGroup.GET("/:id", api.GetUserByID)
-	usersGroup.GET("/username/:username", api.GetUserByUsername)
+	usersGroup.GET("/usr/:username", api.GetUserByUsername)
 	usersGroup.PUT("/", api.UpdateUser)
 	usersGroup.DELETE("/:id", api.DeleteUserByID)
-	usersGroup.DELETE("/username/:username", api.DeleteUserByUsername)
+	usersGroup.DELETE("/usr/:username", api.DeleteUserByUsername)
 	usersGroup.Use(logger.LogRequest)
 
 	/*chatsGroup.POST("/", api.CreateChat)
